Nullify article for no audit, collectible article keep, overlay WvW leaderboard style, fetch pattern sort

--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
 					</span>
 					<div id="mapAlarmPopup" class="hudPopup cntComposition">
 						<div id="mapAlarmStopwatchUp">
+							<b class="jsTranslate">Stopwatch</b><br />
 							<input id="watOffsetMinutes" type="number" min="0" max="1440" step="1" value="0" title="<dfn>Stopwatch Offset:</dfn> minutes to add to the initial stopwatch time." />&nbsp;:&nbsp;
 							<input id="watOffsetSeconds" type="number" min="0" max="86400" step="1" value="0" title="<dfn>Stopwatch Offset:</dfn> seconds to add to the initial stopwatch time and egg timer." />
 							<span class="watButtons">
