--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<script>window.L || document.write("<script src='bin/leaflet.js'><\/script>");</script>
 	<!-- Web application files  -->
 	<script type="text/javascript" src="plugins.js"></script>
-	<script type="text/javascript" src="data/general.js?v=20170411"></script>
+	<script type="text/javascript" src="data/general.js?v=20170411A"></script>
 	<script type="text/javascript" src="data/sale.js?v=20170411"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
 	<script type="text/javascript" src="gw2t-min.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
@@ -326,7 +326,7 @@
 							<label title="Show/Hide region-colored borders over zones."><img data-src="img/map/border.png" /><input id="opt_bol_showZoneBorders" type="checkbox" /> Show zone borders</label>
 							<label title="Show/Hide gateways, wallows, tunnels, thermal tubes, and launch pads."><img data-src="img/map/gateway_interborders.png" /><input id="opt_bol_showZoneGateways" type="checkbox" /> Show zone gateways</label>
 							<label title="Double click on the map to lay/remove a personal pin.<br />This option will draw a path from these pins."><img data-src="img/map/path.png" /><input id="opt_bol_showPersonalPaths" type="checkbox" /> Show personal paths</label>
-							<label title="Show/Hide the colored chain paths of world bosses."><img data-src="img/map/pin_green.png" /><input id="opt_bol_showChainPaths" type="checkbox" /> Show chain paths</label>
+							<label title="Show/Hide the colored chain paths of world bosses."><img data-src="img/map/path_chains.png" /><input id="opt_bol_showChainPaths" type="checkbox" /> Show chain paths</label>
 							<label title="Automatically scroll the map to the next predicted world boss event."><img data-src="img/map/tour.png" /><input id="opt_bol_tourPrediction" type="checkbox" /> Tour predicted events</label>
 							<label title="Color of the personal path and world completion route."><input id="opt_str_colorPersonalPath" type="text" maxlength="32" style="width:96px;"> Path Color</label>
 							<br />
