Cleanable bank filter

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 			<div id="mapHUDContainer">
 				<div id="mapHUDContainerInner">
 					<div id="itemTimeline">
-						<kbd id="tmlToggle" class="btnWindow btnToggle" title="<dfn>Toggle timeline</dfn>. To hide permanently, go to Options page, Map section.<br /> To toggle all, right click on the map and choose &quot;Toggle HUD&quot;."><var id="tmlTitle"></var></kbd>
+						<kbd id="tmlToggle" class="btnWindow btnToggle" title="<dfn>Toggle timeline</dfn>. To hide permanently, right click on the map and choose &quot;Toggle HUD&quot;."><var id="tmlTitle"></var></kbd>
 						<div id="tmlContainer">
 							<kbd id="tmlOpaque" class="btnWindow btnOpaque" title="<dfn>Toggle timeline opacity</dfn>"></kbd>
 							<kbd id="tmlCondense" class="btnWindow btnVertical" title="<dfn>Condense timeline</dfn> or show all lines again."></kbd>
