--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<script>window.L || document.write("<script src='bin/leaflet.js'><\/script>");</script>
 	<!-- Web application files  -->
 	<script type="text/javascript" src="plugins.js"></script>
-	<script type="text/javascript" src="data/general.js?v=20170414"></script>
+	<script type="text/javascript" src="data/general.js?v=20170414A"></script>
 	<script type="text/javascript" src="data/sale.js?v=20170414"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
 	<script type="text/javascript" src="gw2t-min.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
@@ -256,7 +256,7 @@
 						<div id="mapAlarmBoss">
 							<div id="optChainsToggle"><button id="optChainsExpand">+</button><button id="optChainsCollapse">−</button></div>
 							<fieldset name="int_setAlarm"><legend id="optAlarmLegend" class="jsTranslate">Boss Alarm</legend>
-								<label title="Turn off the boss alarm. Go to Options page, Alarm section for more info."><input id="opt_int_setAlarm" type="radio" name="int_setAlarm" /><var class="jsTranslate">Off</var></label>
+								<label title="Turn off the boss alarm."><input id="opt_int_setAlarm" type="radio" name="int_setAlarm" /><var class="jsTranslate">Off</var></label>
 								<label title="Alert you when an unchecked world boss starts.<br />Checkmark a chain by clicking its boss icon (left side)."><input id="optAlarmChecklist" type="radio" name="int_setAlarm" /><var class="jsTranslate">Checklist</var></label>
 								<label title="Alert you X minutes before a subscribed chain starts.<br />Subscribe to a chain by clicking its time (right side)."><input id="optAlarmSubscription" type="radio" name="int_setAlarm" /><var class="jsTranslate">Subscription</var></label>
 							</fieldset>
