Inputs style, Directory collapse state

--- a/index.html
+++ b/index.html
@@ -841,13 +841,13 @@
 						<div id="dsbAnnouncement"></div>
 						<div id="dsbCountdown" title="<dfn>Countdown for Official GW2 Events</dfn><br /><span class='cssState cssStateInactive'></span>: not started yet, counting down to when it starts.<br /><span class='cssState cssStateActive'></span>: is happening, counting down to when it ends."></div>
 						<div id="dsbMenu">
-							<div id="dsbMenuSale" class="dsbMenuItem curToggle"></div>
-							<div id="dsbMenuPact" class="dsbMenuItem curToggle"></div>
-							<div id="dsbMenuDaily" class="dsbMenuItem curToggle"></div>
+							<div id="dsbMenuSale" class="dsbTab curToggle"></div>
+							<div id="dsbMenuPact" class="dsbTab curToggle"></div>
+							<div id="dsbMenuDaily" class="dsbTab curToggle"></div>
 						</div>
-						<div id="dsbSale" class="dsbExpansion"></div>
-						<div id="dsbPact" class="dsbExpansion"></div>
-						<div id="dsbDaily" class="dsbExpansion"></div>
+						<div id="dsbSale" class="dsbSubcontainer"></div>
+						<div id="dsbPact" class="dsbSubcontainer"></div>
+						<div id="dsbDaily" class="dsbSubcontainer"></div>
 						<div id="dsbStory" class="jsScrollable"></div>
 						<div class="cntDivider"></div>
 					</div>
