--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 	<script>window.L || document.write("<script src='bin/leaflet.js'><\/script>");</script>
 	<!-- Web application files  -->
 	<script type="text/javascript" src="plugins.js"></script>
-	<script type="text/javascript" src="data/general.js?v=20170420"></script>
-	<script type="text/javascript" src="data/sale.js?v=20170420"></script>
+	<script type="text/javascript" src="data/general.js?v=20170421"></script>
+	<script type="text/javascript" src="data/sale.js?v=20170421"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
 	<script type="text/javascript" src="gw2t-min.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
 	<!-- Google Analytics -->
@@ -592,7 +592,7 @@
 							<label><input id="opt_bol_narrateCastle" type="checkbox" /></label>
 						</div>
 						<div id="logNarrateOther">
-							<button style="width:45%;" title="Pause/Resume updates."><img id="wvwPause" data-src="img/ui/cancel.png" /></button>&nbsp;
+							<button id="wvwPause" style="width:45%;" title="Pause/Resume updates."><img data-src="img/ui/cancel.png" /></button>&nbsp;
 							<label style="width:45%;display:inline-block"><input id="logNarrateVolume" type="range" min="0" max="100" step="5" title="Set volume." /></label>
 						</div>
 					</div>
