Sale update, exclusive node checkbox

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 	<script>window.L || document.write("<script src='bin/leaflet.js'><\/script>");</script>
 	<!-- Web application files  -->
 	<script type="text/javascript" src="plugins.js"></script>
-	<script type="text/javascript" src="data/general.js?v=20170422"></script>
-	<script type="text/javascript" src="data/sale.js?v=20170423"></script>
+	<script type="text/javascript" src="data/general.js?v=20170424"></script>
+	<script type="text/javascript" src="data/sale.js?v=20170424"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
 	<script type="text/javascript" src="gw2t-min.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
 	<!-- Google Analytics -->
@@ -675,7 +675,7 @@
 	<div id="panelAccount" class="panelMain"></div>
 	<div id="panelApp" class="panelMain">
 		<kbd id="itemDisplayButton" class="mapDisplayButton btnWindow btnHorizontal" title="<dfn>Toggle Panel</dfn>"></kbd>
-		<var id="itemHome"></var>
+		<var id="itemHome" class="btnSite"></var>
 		<div id="paneSimple">
 			<div id="itemSimpleSD">
 				<var id="itemSimpleCurrentSD"></var>
@@ -817,7 +817,7 @@
 		==================================================================== -->
 		<section id="paneContent" class="paneApp">
 			<article id="plateDirectory" class="jsScrollable">
-				<div id="itemLanguage">
+				<div id="itemLanguage" class="btnSite">
 					<div id="itemLanguageButton"></div>
 					<ul id="itemLanguagePopup" class="cntPopup">
 						<li><a class="linkLanguage" data-lang="en">English</a></li>
